# geom-to-shapefile

./: .gitignore  README.md  pyproject.toml  requirements.txt
src/export_to_shp/: __init__.py  export_to_shp.py
