[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "export-to-shp"
version = "0.1.0"
description = "Python class for exporting DataFrame or GeoDataFrame to shapefile format"
readme = "README.md"
requires-python = ">=3.10"

authors = [
    {name = "r3card0", email = "ricardo.rdz@protonmail.com"}
]

[tool.setuptools.packages.find]
where = ["src"]